--- a/Learning-management-system/src/main/resources/application.properties
+++ b/Learning-management-system/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Learning-management-system
+#DATASOURCE PROPERTIES
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/learning-management-system?createDatabaseIfNotExist=true
+spring.datasource.username = root
+spring.datasource.password = ROOT
+
+#JPA SPECIFIC PROPERTIES
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+server.port=9090
